fixed sub menu level 2 not showing

--- a/plugins/system/zo2/assets/zo2/development/less/megamenu.less
+++ b/plugins/system/zo2/assets/zo2/development/less/megamenu.less
@@ -300,11 +300,6 @@
                                        }
                                    }
                                }
-                               .mega.hovering {
-                                   & > .mega-dropdown-menu {
-                                       overflow: hidden;
-                                   }
-                               }
                                .mega.open {
                                    & > .mega-dropdown-menu {
                                        & > div {
