--- a/templates/zo2_hallo/assets/zo2/development/less/megamenu.less
+++ b/templates/zo2_hallo/assets/zo2/development/less/megamenu.less
@@ -273,9 +273,7 @@
     &.animate.elastic .mega.open > .mega-dropdown-menu {
       .scale(1);
     }
-    &.animate.slide .mega.hovering > .mega-dropdown-menu {
-      overflow: hidden;
-    }
+
     &.animate.slide .mega > .mega-dropdown-menu > div {
       .transition(all 400ms);
       .backface-visibility(hidden);
